--- a/styles/style.css
+++ b/styles/style.css
@@ -6,3 +6,130 @@ Green: #00B172
 White: #FFF
 
 */
+
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
+}
+
+/* Remove default padding */
+ul[class],
+ol[class] {
+	padding: 0;
+}
+
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+ul[class],
+ol[class],
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd {
+	margin: 0;
+}
+
+/* Set core body defaults */
+body {
+	min-height: 100vh;
+	scroll-behavior: smooth;
+	text-rendering: optimizeSpeed;
+	line-height: 1.5;
+}
+
+/* Remove list styles on ul, ol elements with a class attribute */
+ul[class],
+ol[class] {
+	list-style: none;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+	text-decoration-skip-ink: auto;
+}
+
+/* Make images easier to work with */
+img {
+	max-width: 100%;
+	display: block;
+}
+
+/* Natural flow and rhythm in articles by default */
+article > * + * {
+	margin-top: 1em;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+	font: inherit;
+}
+
+
+/*-- CUSTOM STYLES--*/
+
+header {
+  clear: both;
+  overflow: auto;
+  background-color: #fff;
+}
+
+.logo img {
+  float:left;
+  height: 4em;
+  margin: 1em 2em;
+}
+
+ul li {
+  display: inline-block;
+  margin: 0 0.5em;
+  font-family: 'Poppins';
+  font-weight: 300;
+  font-size: 1.5em;
+}
+
+nav {
+  float: right;
+}
+
+nav a {
+  text-decoration: none;
+}
+
+.landing-section {
+  background-image: url('../images/landing.jpg');
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */
+  height: 100vh;
+}
+
+.landing-section h1 {
+  text-align: center;
+  margin-top: 25vh;
+  font-family: 'Poppins';
+  font-weight: 800;
+  font-size: 4em;
+  color: #fff;
+}
+
+.landing-section h2 {
+  text-align: center;
+  margin: 0.5em auto 0 auto;
+  font-family: 'Poppins';
+  font-weight: 300;
+  font-size: 1.2em;
+  width: 40vw;
+  color: #fff;
+}
