--- a/styles/style.css
+++ b/styles/style.css
@@ -134,3 +134,13 @@ nav a {
   width: 40vw;
   color: #fff;
 }
+
+.card-section h3 {
+  font-family: 'Poppins';
+  font-weight: 500;
+  font-size: 2.5em;
+  text-align: center;
+  margin: 1em auto;
+  border-bottom: 4px solid rgb(90 195 122);
+  width: 10em;
+}
